kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tafarn-frontend
  namespace: toot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tafarn
      part: frontend
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: tafarn
        part: frontend
    spec:
      volumes:
        - name: conf
          configMap:
            name: tafarn-conf
        - name: keys
          secret:
            secretName: tafarn-keys
        - name: media
          persistentVolumeClaim:
            claimName: tafarn-media
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: frontend
          image: theenbyperor/tafarn:(version)
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
            - "-c"
            - "sleep 15; /tafarn/frontend"
          volumeMounts:
            - mountPath: "/media"
              name: media
            - mountPath: "/keys"
              name: keys
            - mountPath: "/tafarn/Rocket.toml"
              name: conf
              subPath: "Rocket.toml"
          ports:
            - containerPort: 80
        - name: clatd
          image: as207960/clatd
          command: [
            "/bin/bash", "-c",
            "/clatd/clatd clat-v6-addr=fd2e:ae7d:58e3:f6ab::1 v4-conncheck-enable=no 'script-up=ip6tables -t nat -A POSTROUTING -o eth0 -j MASQUERADE'"
          ]
          securityContext:
            privileged: true
