kube/net.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tafarn-frontend
  namespace: toot
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: tafarn
              part: nginx
      ports:
        - port: 80
          protocol: TCP
  podSelector:
    matchLabels:
      app: tafarn
      part: frontend
  policyTypes:
    - Ingress
